| Summary: | ASTERISK-29507: STUN timeout is silently delaying calls | ||||||||
| Reporter: | Sébastien Duthil (sduthil) | Labels: | |||||||
| Date Opened: | 2021-07-05 14:35:08 | Date Closed: | 2021-07-16 09:53:34 | ||||||
| Priority: | Minor | Regression? | No | ||||||
| Status: | Closed/Complete | Components: | Resources/res_rtp_asterisk | ||||||
| Versions: | 18.5.0 | Frequency of Occurrence | Constant | ||||||
| Related Issues: |
| ||||||||
| Environment: | Attachments: | ||||||||
| Description: | Given Asterisk rtp.conf is configured with
{noformat} [general] icesupport=yes stunaddr=10.9.9.9 ; no route to host {noformat} Given a PJSIP endpoint configured with {noformat} ice_support=yes {noformat} When the PJSIP endpoints dials any answering extension Then the call is blocked for ~10 seconds Then no errors are visible in the console Then the call continues Expected: The Asterisk console shows that the STUN request timed out | ||||||||
| Comments: | By: Asterisk Team (asteriskteam) 2021-07-05 14:35:11.375-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Joshua C. Colp (jcolp) 2021-07-05 14:44:42.468-0500 I'm marking this as a duplicate of ASTERISK-29276 as that is the main issue for this. By: Joshua C. Colp (jcolp) 2021-07-05 14:50:50.037-0500 Since you've created a patch I've reopened this. By: Friendly Automation (friendly-automation) 2021-07-16 09:53:35.613-0500 Change 16144 merged by Friendly Automation: stun: Emit warning message when STUN request times out [https://gerrit.asterisk.org/c/asterisk/+/16144|https://gerrit.asterisk.org/c/asterisk/+/16144] By: Friendly Automation (friendly-automation) 2021-07-19 06:54:59.208-0500 Change 16166 merged by Joshua Colp: stun: Emit warning message when STUN request times out [https://gerrit.asterisk.org/c/asterisk/+/16166|https://gerrit.asterisk.org/c/asterisk/+/16166] By: Friendly Automation (friendly-automation) 2021-07-19 06:58:06.401-0500 Change 16165 merged by Joshua Colp: stun: Emit warning message when STUN request times out [https://gerrit.asterisk.org/c/asterisk/+/16165|https://gerrit.asterisk.org/c/asterisk/+/16165] | ||||||||